fixed overflow on landing page

--- a/styles/home.css
+++ b/styles/home.css
@@ -178,7 +178,6 @@ body {
 
 .content-img {
     width: 100%;
-    text-align: center;
 }
 
 .content-img img {
@@ -489,6 +488,11 @@ body {
 @media (max-width: 600px) {
     .content-text {
         padding: 1rem;
+    }
+
+    .content-img {
+        width: 90%;
+        margin: 0 auto;
     }
 
     .img-2 {
